# reprobuild-examples

./: .gitignore  README.md
ada-mode3/binary-with-library/: repro.nim
c-cpp-autotools/hello-binary/: Makefile.am  configure.ac  reprobuild.nim
c-cpp-autotools/hello-binary/src/: main.c
c-cpp-cmake/hello-binary/: CMakeLists.txt  reprobuild.nim
c-cpp-cmake/hello-binary/src/: main.c
c-cpp-make/binary/: Makefile  reprobuild.nim
c-cpp-make/binary/src/: main.c
c-cpp-make/library-static/: Makefile  reprobuild.nim
c-cpp-make/library-static/src/: greet.c  greet.h
c-cpp-meson/hello-binary/: meson.build  reprobuild.nim
c-cpp-meson/hello-binary/src/: main.c
c-cpp-mode3/binary-with-library/: repro.nim  repro.scanned-deps.nim
crystal-mode3/hello-binary/: reprobuild.nim
crystal-mode3/hello-binary/src/: hello.cr
crystal-shards/hello-binary/: reprobuild.nim  shard.yml
crystal-shards/hello-binary/src/: hello.cr
csharp-dotnet/hello-binary/: Program.cs  hello.csproj  reprobuild.nim
d-mode3/binary-with-library/: repro.nim
elixir-mix/hello-binary/: mix.exs  reprobuild.nim
elixir-mix/hello-binary/lib/: hello.ex
erlang-rebar3/hello-binary/: rebar.config  reprobuild.nim
erlang-rebar3/hello-binary/src/: hello.app.src  hello.erl
fortran-mode3/binary-with-library/: repro.nim
go-mode3/binary-with-library/: repro.nim  repro.scanned-deps.nim
go-mode3/binary-with-library/calc/: main.go
go-mode3/binary-with-library/mathlib/: add.go
go/binary/: go.mod  main.go  reprobuild.nim
go/library-with-tests/: go.mod  greet.go  greet_test.go  reprobuild.nim
go/multi-binary/: go.mod  reprobuild.nim
haskell-cabal/hello-binary/: hello.cabal  reprobuild.nim
haskell-cabal/hello-binary/app/: Main.hs
java-maven/hello-binary/: pom.xml  reprobuild.nim
javascript-typescript/node-server/: package.json  reprobuild.nim
javascript-typescript/node-server/src/: index.js
javascript-typescript/typescript-cli/: package-lock.json  package.json  reprobuild.nim
javascript-typescript/typescript-cli/test/: cli.test.ts
javascript-typescript/typescript-library/: package.json  reprobuild.nim  tsconfig.json
javascript-typescript/vite-app/: package.json  reprobuild.nim  vite.config.js
javascript-typescript/vite-app/src/: index.js
javascript-typescript/webpack-app/: package.json  reprobuild.nim  webpack.config.cjs
javascript-typescript/webpack-app/src/: index.js
jsts-mode3/binary-with-library/: repro.nim  repro.scanned-deps.nim
kotlin-gradle/hello-binary/: build.gradle.kts  reprobuild.nim  settings.gradle.kts
m71-home-profile-walkthrough/: home.nim
mixed/ada-uses-cpp-lib/: repro.nim
mixed/cpp-uses-ada-lib/: repro.nim
mixed/cpp-uses-d-lib/: repro.nim
mixed/cpp-uses-fortran-lib/: repro.nim
mixed/cpp-uses-go-lib/: .gitignore  repro.nim
mixed/cpp-uses-go-lib/goaddlib/: lib.go
mixed/cpp-uses-nim-lib/: repro.nim  repro.scanned-deps.nim
mixed/cpp-uses-pascal-lib/: repro.nim
mixed/cpp-uses-rust-lib/: repro.nim
mixed/cpp-uses-zig-lib/: repro.nim
mixed/d-uses-cpp-lib/: repro.nim
mixed/fortran-uses-cpp-lib/: repro.nim
mixed/go-uses-cpp-lib/: .gitignore  repro.nim
mixed/go-uses-cpp-lib/calc/: main.go
mixed/nim-uses-cpp-lib/: repro.nim
mixed/nim-uses-cpp-lib/src/: nimapp.nim
mixed/nim-uses-rust-lib/: repro.nim
mixed/nim-uses-rust-lib/src/: nimapp.nim
mixed/pascal-uses-cpp-lib/: repro.nim
mixed/rust-uses-cpp-lib/: repro.nim
mixed/rust-uses-nim-lib/: repro.nim
mixed/zig-uses-cpp-lib/: repro.nim
nim/binary/: nim_binary_example.nimble  reprobuild.nim
nim/binary/src/: nim_binary_example.nim
nim/library-with-tests/: nim_library_with_tests_example.nimble  reprobuild.nim
nim/library-with-tests/src/: nim_library_with_tests_example.nim
nim/library-with-tests/tests/: test_greet.nim
nim/mode3-pilot/: mode3_pilot.nimble  repro.nim  repro.scanned-deps.nim
nim/mode3-pilot/src/: greet.nim  hello.nim
nim/multi-binary/: nim_multi_binary_example.nimble  reprobuild.nim
nim/multi-binary/src/: alpha.nim  beta.nim
ocaml-dune/hello-binary/: hello.ml  reprobuild.nim
pascal-mode3/binary-with-library/: repro.nim
php-composer/hello-binary/: composer.json  reprobuild.nim
python-mode3/binary-with-library/: repro.nim  repro.scanned-deps.nim
python/console-script/: pyproject.toml  reprobuild.nim
python/console-script/src/python_console_script/: __init__.py  cli.py
python/library-pure/: pyproject.toml  reprobuild.nim
python/library-pure/src/python_library_example/: __init__.py
python/pep517-maturin/: Cargo.toml  pyproject.toml  reprobuild.nim
python/pep517-maturin/src/: lib.rs
python/pep517-scikit-build-core/: CMakeLists.txt  pyproject.toml  reprobuild.nim
python/pep517-scikit-build-core/src/: module.c
ruby-bundler/hello-binary/: Gemfile  reprobuild.nim
rust-mode3/binary-with-library/: repro.nim  repro.scanned-deps.nim
rust/binary/: Cargo.toml  reprobuild.nim
rust/binary-with-build-rs/: Cargo.toml  build.rs  reprobuild.nim
rust/binary-with-build-rs/src/: main.rs
rust/binary-with-crates-io/: Cargo.toml  reprobuild.nim
rust/binary-with-crates-io/src/: main.rs
rust/binary/src/: main.rs
rust/cdylib/: Cargo.toml  reprobuild.nim
rust/cdylib/src/: lib.rs
rust/library-with-tests/: Cargo.toml  reprobuild.nim
rust/workspace/: Cargo.toml  reprobuild.nim
rust/workspace-lib-chain/: Cargo.toml  reprobuild.nim
swift-swiftpm/hello-binary/: Package.swift  reprobuild.nim
zig-mode3/binary-with-library/: repro.nim
(+90 files in other folders)
