[project]
name = "python-console-script"
version = "0.1.0"
description = "Minimal Python console-script example for the standard provider"
requires-python = ">=3.11"

[project.scripts]
python-console-script = "python_console_script.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_console_script"]
