[project]
name = "python-library-example"
version = "0.1.0"
description = "Minimal pure-Python library for the standard provider"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_library_example"]
