[project]
name = "python-pep517-scikit-build-core-example"
version = "0.1.0"
description = "Minimal scikit-build-core example — routes through M24 Mode B fallback"
requires-python = ">=3.11"

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Point scikit-build-core at the CMakeLists.txt at the project root
# (default behaviour, but stated explicitly for clarity).
cmake.source-dir = "."
# Where the built Python extension is installed inside the wheel.
wheel.packages = []
